--- a/simple-todos/imports/ui/body.html
+++ b/simple-todos/imports/ui/body.html
@@ -3,8 +3,14 @@
     <header>
       <h1>Todo List</h1>
     </header>
- 
-	<form class="new-task">
+    <h1>Todo List ({{incompleteCount}})</h1>
+
+    <label class="hide-completed">
+        <input type="checkbox" />
+        Hide Completed Tasks
+    </label>
+
+    <form class="new-task">
         <input type="text" name="text" placeholder="Type to add new tasks" />
     </form>
  
