--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -13,7 +13,9 @@
     {{#if currentUser}}
         <form class="new-task">
           <input type="text" name="text" placeholder="Введите новую задачу" />
-		  <textarea name="discription" placeholder="Описание" cols="50" rows="6"></textarea>
+		  <input type="text" name="description" placeholder="Описание" />
+		  <input type="date" name="date" />
+		  <!--<textarea name="discription" placeholder="Описание" cols="50" rows="6"></textarea>-->
 		  <input type="submit" class="red bigrounded" value="Добавить" />
         </form>
     {{/if}}
