--- a/imports/ui/task.html
+++ b/imports/ui/task.html
@@ -18,6 +18,7 @@
     {{/if}}
  
     <span class="text"><strong>{{username}}</strong> - {{text}}</span>
+	<span class="text"><strong>Выполнить до</strong> - {{date}}</span>
 	<span class="text"><strong>Описание</strong> - {{description}}</span>
   </li>
 </template>
